# open-lifeworlds-data-product-berlin-lor-points-of-interest

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  main.py  odps.yml  pyproject.toml  requirements.txt
data/: lor-area-cache.csv
data/berlin-lor-points-of-interest-2024-01/: berlin-lor-points-of-interest-2024-01-districts.geojson  berlin-lor-points-of-interest-2024-01-forecast-areas.geojson  berlin-lor-points-of-interest-2024-01.csv  berlin-lor-points-of-interest-apartment-buildings-2024-01-details.csv  berlin-lor-points-of-interest-apartment-buildings-2024-01-details.geojson  berlin-lor-points-of-interest-apartment-buildings-2024-01-details.json  berlin-lor-points-of-interest-art-galleries-2024-01-details.csv  berlin-lor-points-of-interest-art-galleries-2024-01-details.geojson  berlin-lor-points-of-interest-art-galleries-2024-01-details.json  berlin-lor-points-of-interest-bars-2024-01-details.csv  berlin-lor-points-of-interest-bars-2024-01-details.geojson  berlin-lor-points-of-interest-bars-2024-01-details.json  berlin-lor-points-of-interest-beer-gardens-2024-01-details.csv  berlin-lor-points-of-interest-beer-gardens-2024-01-details.geojson  berlin-lor-points-of-interest-beer-gardens-2024-01-details.json  berlin-lor-points-of-interest-bicycle-rentals-2024-01-details.csv  berlin-lor-points-of-interest-bicycle-rentals-2024-01-details.geojson  berlin-lor-points-of-interest-bicycle-rentals-2024-01-details.json  (+115 more)
docs/: berlin-lor-points-of-interest-statistics.json  data-product-canvas.md  odps-canvas.md
(+437 files in other folders)
